--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "axios": "^1.7.2",
         "bootstrap": "^5.1.3",
         "framer-motion": "^11.3.19",
+        "jwt-decode": "^4.0.0",
         "moment": "^2.29.1",
         "react": "^18.3.1",
         "react-addons-shallow-compare": "^15.6.2",
